<resources>
    <string name="app_name">LoginRegister</string>
    <string name="register">Register</string>
    <string name="jane_example_com">jane@example.com</string>
    <string name="please_enter_your_password">please enter your password</string>
    <string name="log_in">Log In</string>
    <string name="next">next</string>
    <string name="sign_up">sign up</string>
    <string name="policy">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="enter_username">enter username</string>
    <string name="logged_out">logged out</string>
    <string name="logout">logout</string>
    <string name="enter_your_e_mail">enter your e-mail</string>
    <string name="reset_password">reset password</string>
    <string name="password_reset">Password Reset</string>
    <string name="forgotten_pass">forgot your passwod? click here to reset it</string>
</resources>