<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <Space
            android:id="@+id/statusbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="9dp"
            android:fontFamily="sans-serif-medium"
            android:format12Hour="hh:mm a"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/statusbar_icons_view"
            android:layout_width="200dp"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/statusbar"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            android:text="logged out"
            android:textSize="20sp"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV_mobile_data"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_mobiledata"
            app:layout_constraintEnd_toStartOf="@id/IV_wifi"
            app:layout_constraintStart_toStartOf="@+id/statusbar_icons_view"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV_wifi"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_wifi"
            app:layout_constraintEnd_toEndOf="@id/IV_battery"
            app:layout_constraintStart_toEndOf="@id/IV_mobile_data"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV_battery"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="11dp"
            android:src="@drawable/ic_battery"
            app:layout_constraintEnd_toEndOf="@id/statusbar_icons_view"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/IV_wifi"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_backbutton"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/jane_example_com"
            android:minHeight="48dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/please_enter_your_password"
            android:minHeight="48dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>